Fix double scroll bar causing navigation issues
* Remove .h-screen and .overflow-y-auto, which constrain the main content area to be only the height of the browser window, which causes a secondary scroll bar that only scrolls that content. Now, the main content area flows as part of the entire page.
* Add styling to explicitly fix the nav header to the top, and increase the content area top margin to account for the nav header being taken out of the normal layout flow.

--- a/website/src/app.pcss
+++ b/website/src/app.pcss
@@ -121,3 +121,13 @@
 .content hr {
 	@apply w-4/5 mx-auto mt-8 mb-8 border-dashed border-2
 }
+
+.nav-header {
+    position: fixed;
+    align-content: center;
+    width: 100%;
+}
+
+.content {
+    margin-top: 4em;
+}
